chore: added lsm vector index build progress API
(cherry picked from commit 87d6437363918a733123eeb27d03f698c228fe48)